# gttraj

./: CMakeLists.txt  README.md  Test.cpp
include/gttraj/: Path.h  Trajectory.h
src/: Example.cpp  Path.cpp  Test.cpp  Trajectory.cpp
